# gemma-triton-flash-attn

./: .gitignore  README.md  claude.md  pyproject.toml  requirements.txt
benchmarks/: README.md  alloc_overhead.py  attn_only_all_n.json  attn_only_all_n.py  attn_only_all_n_quick.json  bwd_breakdown.py  bwd_breakdown_D512.json  diag_short_n.py  dkv_split_bench.py  dkv_stages_sweep.py  dkv_swa_sweep_D256.json  dkv_swa_sweep_D256.py  dkv_sweep_D512.json  dkv_sweep_D512.py  dq_sweep_D512.json  dq_sweep_D512.py  dump_kernel_regs.py  moe_attn_sweep.json  moe_vs_e2b_baseline.py  moe_vs_e2b_baseline_quick.json  pack_gqa_fwd_probe.py  plot_training_loss.py  profile_n8k.json  profile_n8k.py  profile_short_n.json  profile_short_n.py  profile_swa.json  profile_swa.py  real_gemma4_fwdbwd.py  replot.py  results.json  run_final_benchmark.py  swa_e2e_bench.py  swa_e2e_bench_after.json  swa_e2e_bench_before.json  swa_e2e_bench_ngate.json  training_loss_fsdp2.json  triton_launch_overhead.py
context/: arch.md  baseline.md  hotspots.md  index.md
docs/: api.md  architecture.md  integration.md  optimization_notes.md  tests.md
flash_attn/: __init__.py  attention.py  gemma4_e2e.py  hf_integration.py  utils.py
skills/: 2026-04-16_triton-large-headdim.md  2026-04-17_alloc-not-bottleneck.md  2026-04-17_block-sweep-sm-occupancy.md  2026-04-17_delta-fusion-into-dQ.md  2026-04-17_fp16-cossim-pitfall.md  2026-04-17_grid-gate-over-n-gate.md  2026-04-17_pack-gqa-register-model.md  2026-04-17_q-split-dkv.md  skills.md
tests/: README.md  (+3 more)
tests/gemma4_integration/: README.md  pyproject.toml  test_adapter.py  test_gemma4.py  test_gemma4_moe.py  test_gemma4_moe_profile.py  test_memory.py  test_training.py  test_training_fsdp2.py
(+14 files in other folders)
